# telegram-listener

./: .env.example  README.md  compose.dev.yml
listener/: .gitignore  pyproject.toml
listener/src/: constants.py  main.py  opensearch.py
listener/src/settings/: __init__.py  opensearch.py  telegram.py
